Version 1.119 (?? Sep 02)
- Valgrind noticed that copy_tds() touched pointers of index > dimension().
- undocument set_number_of_vertices(), and deprecate it.

Version 1.118 (30 Aug 02)
- Derive from Quadruple.  This cuts the template chain, which helps VC++7.

Version 1.117 (27 Aug 02)
- Changed typedef for Cell_handle and Vertex_handle in TDS_3
  following a workaround in Trivial_iterator.h for MSC

Version 1.116 (5 Aug 02)
- replace Pointer by CGAL_COMPARABLE_ITERATOR_CHECKER( *) for 
  Vertex_handle and Cell_handle in TDS
- Remove src/Triangulation_3.C .
- Remove deprecated functions incident_vertices() and indicent_cells()
  taking std::set & as argument.
- Explicit instantiation of the big classes in the test-suite.

Version 1.115 (29 May 02)
- Replace max2 by maxless.
- DS_Container removed from this package. Goes to Triangulation_2.

-----------------------  CGAL 2.4 ------------------------

Version 1.114 (15 May 02)
- bug fix in the doc of the Delaunay traits concept
- use of Lazy_exact_nt in demo_voronoi

Version 1.113 (7 May 02)
- bug fix in deprecated version of incident_vertices()

Version 1.112 (12 April 02)
- Split insert_conflict() in insert_conflict_2() and insert_conflict_3().

Version 1.111 (12 April 02)
- Fix link problem in DS_Container.
- Remove include dependency order in Regular_euclidian_traits_3.h.

Version 1.110 (10 April 02)
- method Triangulation_3<GT,Tds>::triangle returns a triangle oriented 
towards the outside of the cell c for facet (c,i)

Version 1.109 (9 April 02)
- SunPro can't eat the automatic conversion iterator -> handle in some cases,
  so fix example_color.C.

Version 1.108 (22 March 02)
- Iterators and circulators are convertible to handles.
- Cell.init() obsolete (redundant with default constructor)

Version 1.107 (8 March 02)
- patch in DS_Container for MSVC

Version 1.106 (1 March 02)
- Updates for DS_Container.

Version 1.105 (18 February 02)
- Shorten DS_Container::Free_elt so that TDS_2 can use it.