@@ -1,6 +1,7 @@
 Version 1.119 (?? Sep 02)
 - Valgrind noticed that copy_tds() touched pointers of index > dimension().
 - undocument set_number_of_vertices(), and deprecate it.
+- Remove _number_of_vertices, since DS_Container now counts.
 
 Version 1.118 (30 Aug 02)
 - Derive from Quadruple.  This cuts the template chain, which helps VC++7.
